# hypermodern-python-seed

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .coveragerc  .darglint  .flake8  .gitignore  .isort.cfg  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
{{cookiecutter.directory_name}}/docker/: Dockerfile  launcher.sh
{{cookiecutter.directory_name}}/docs/: ARCHITECTURE.md  SPEC.md  USE_CASES.md  conf.py  index.rst
{{cookiecutter.directory_name}}/docs/content/: architecture.rst  diagrams.rst  install.rst  reference.rst  spec.rst  usecases.rst
{{cookiecutter.directory_name}}/scripts/: build-container.sh  launch-shell-in-container.sh  run-command.sh  run-container.sh
{{cookiecutter.directory_name}}/src/{{cookiecutter.project_name}}/: __init__.py  console.py  custom_logger.py
{{cookiecutter.directory_name}}/test/: test_console.py
{{cookiecutter.directory_name}}/tests/: __init__.py  test_console.py
{{cookiecutter.directory_name}}/web/: server.py
