[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
readme = "{{cookiecutter.readme}}"
homepage = "{{cookiecutter.homepage}}"
repository = "{{cookiecutter.repository}}"
keywords = [{{cookiecutter.keywords}}]


[tool.poetry.dependencies]
python = ">=3.7, < 3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
mypy = "^0.790"
pytype = {version = "^2020.11.3", python = ">=3.7, < 3.9"}
flake8-annotations = "^2.4.1"
flake8-docstrings = "^1.5.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_name}}"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["{{cookiecutter.project_name}}", "test"]
