[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
readme = "{{cookiecutter.readme}}"
homepage = "{{cookiecutter.homepage}}"
repository = "{{cookiecutter.repository}}"
keywords = [{{cookiecutter.keywords}}]


[tool.poetry.dependencies]
python = "^3.10.3"
click = "^8.1.3"
pydantic = "^1.9.1"
colorama = "^0.4.4"
loguru = "^0.6.0"
fs = "^2.4.16"
Flask = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.2"}
pytest-cov = "^3.0.0"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-isort = "^4.1.1"
mypy = "^0.971"
flake8-annotations = "^2.9.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.1"
Sphinx = "^5.0.2"
sphinx-autodoc-typehints = "^1.18.3"
flake8-rst-docstrings = "^0.2.7"
flake8-sphinx-links = "^0.2.1"
sphinxcontrib-mermaid = "^0.7.1"
click = "^8.1.3"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_name}}"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["{{cookiecutter.project_name}}", "test"]
