[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
license = "{{cookiecutter.license}}"
readme = "{{cookiecutter.readme}}"
homepage = "{{cookiecutter.homepage}}"
repository = "{{cookiecutter.repository}}"
keywords = [{{cookiecutter.keywords}}]


[tool.poetry.dependencies]
GeoAlchemy2 = "^0.12.3"
PyJWT = {extras = ["crypto"], version = "^2.4.0"}
SQLAlchemy = "^1.4.40"
Sphinx = "^5.1.1"
click = "^8.1.3"
colorama = "^0.4.4"
fastapi = "^0.79.0"
fs = "^2.4.16"
loguru = "^0.6.0"
opentelemetry-instrumentation = "^0.32b0"
opentelemetry-instrumentation-fastapi = "^0.32b0"
pydantic = "^1.9.1"
python = "^3.10"
uvicorn = "^0.18.2"
uvicorn-loguru-integration = "^0.3.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.1.1"
black = "^22.6.0"
click = "^8.1.3"
code-annotations = "^1.3.0"
coverage = {extras = ["toml"], version = "^6.4.3"}
darglint = "^1.8.1"
flake8-annotations = "^2.9.0"
flake8-black = "^0.3.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.7"
flake8-sphinx-links = "^0.2.1"
flake9 = "^3.8.3"
flake9-isort = "^4.0.2"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinxcontrib-mermaid = "^0.7.1"
xdoctest = "^1.0.1"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_name}}"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.project_name}}.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["{{cookiecutter.project_name}}", "test"]
